Update PWA meta and manifest icons/app names to use the Zoabi Nexus Vault logo; fix mobile settings button icon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Zoabi">
-  <link rel="apple-touch-icon" href="/pwa-192x192.png">
+  <meta name="apple-mobile-web-app-title" content="Zoabi Nexus Vault">
+  <link rel="apple-touch-icon" href="/nexus_logo.png">
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#fafbff" />
